--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "redux": "^4.0.5",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "babel-jest": "^26.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
